"""Misc targets package"""

module(
    name = "tx-pkg-misc",
    version = "0.0.0",
)

bazel_dep(name = "apple_support", version = "1.23.1")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.9")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "emsdk", version = "4.0.15")

# tx useful rules and tools
bazel_dep(name = "tx-kit-ext")  # not published in private registry yet
git_override(
    module_name = "tx-kit-ext",
    remote = "https://github.com/nick-dodonov/tx-kit-ext.git",
    tag = "v/0.1.1",
)

# demo deps
bazel_dep(name = "tx-pkg-aux")  # not published in private registry yet
git_override(
    module_name = "tx-pkg-aux",
    #branch = "main",  # need bazel run @tx-kit-ext//tools:cleanup tx-pkg-aux && bazel clean
    remote = "https://github.com/nick-dodonov/tx-pkg-aux.git",
    tag = "v/0.1.0-pre.2",
    verbose = True,
)

# test dependency
bazel_dep(name = "googletest", version = "1.17.0", dev_dependency = True)
