load("@tx-kit-ext//rules/build:tx_binary.bzl", "tx_binary")

tx_binary(
    name = "hello-pkg",
    srcs = glob(["hello-pkg/**"]),
    deps = ["@tx-pkg-aux//src:pkg-boot"],
)

tx_binary(
    name = "hello-coro",
    srcs = glob(["hello-coro/**"]),
    deps = ["@tx-pkg-aux//src:pkg-boot"],
)

tx_binary(
    name = "try-asio",
    srcs = glob(["try-asio/**"]),
    deps = [
        "@tx-pkg-aux//src:pkg-boot",
        "@asio//:asio",
    ],
)

tx_binary(
    name = "try-sdl3-1st",
    srcs = glob(["try-sdl3-1st/**"]),
    deps = [
        "@tx-pkg-aux//src:pkg-boot",
        "@sdl3//:sdl3_static",
    ],
    #TODO: add support for sdl3_shared build on platforms except wasm32
    # + select({
    #     "@platforms//cpu:wasm32": ["@sdl3//:sdl3_static"],
    #     "//conditions:default": ["@sdl3//:sdl3_shared"],
    # }),
)
