load("@tx-kit-ext//rules/build:tx_binary.bzl", "tx_binary")
load("@bazel_skylib//rules:copy_file.bzl", "copy_file")

tx_binary(
    name = "hello-pkg",
    srcs = glob(["hello-pkg/**"]),
    deps = ["@tx-pkg-aux//src:pkg-boot"],
)

tx_binary(
    name = "hello-coro",
    srcs = glob(["hello-coro/**"]),
    deps = ["@tx-pkg-aux//src:pkg-boot"],
)

tx_binary(
    name = "try-asio",
    srcs = glob(["try-asio/**"]),
    deps = [
        "@tx-pkg-aux//src:pkg-boot",
        "@asio//:asio",
    ],
)

tx_binary(
    name = "try-sdl3-1st",
    srcs = glob(["try-sdl3-1st/**"]),
    deps = [
        "@tx-pkg-aux//src:pkg-boot",
        "@sdl3//:sdl3_static",
    ],
    #TODO: add support for sdl3_shared build on platforms except wasm32
    # + select({
    #     "@platforms//cpu:wasm32": ["@sdl3//:sdl3_static"],
    #     "//conditions:default": ["@sdl3//:sdl3_shared"],
    # }),
)

copy_file(
    name = "copy_data",
    src = "try-sdl3-2nd/data/sample.bmp",
    out = "sample.bmp",
)
tx_binary(
    name = "try-sdl3-2nd",
    srcs = glob(["try-sdl3-2nd/*.cpp"]),
    data = [
        ":copy_data",
    ],
    deps = [
        "@tx-pkg-aux//src:pkg-boot",
        "@sdl3//:sdl3_static",
    ],
    linkopts = select({
        "//conditions:default": [],
        "@platforms//cpu:wasm32": [
            "--preload-file", "$(location :copy_data)@/sample.bmp",
        ],
    }),
)

#DISABLED because current SDL3pp version has issues with constexpr, exceptions and another compile errors w/ clang and C++20
# tx_binary(
#     name = "try-sdl3pp-1st",
#     srcs = glob(["try-sdl3pp-1st/**"]),
#     deps = [
#         "@tx-pkg-aux//src:pkg-boot",
#         "@sdl3pp//:sdl3pp_headers",
#         "@sdl3//:sdl3_static",
#     ],
#     cxxopts = [
#         "-Wno-invalid-constexpr",
#         "-Wno-mismatched-tags",
#         "-Wno-unused-variable",
#         "-Wno-missing-braces",
#         "-fexceptions",
#     ],
# )
