load("@tx-kit-ext//rules/build:tx_binary.bzl", "tx_binary")

tx_binary(
    name = "try-nghttp2",
    srcs = glob(["*.cpp"]),
    deps = [
        "@tx-pkg-aux//:pkg-boot",
        "@nghttp2//:nghttp2",
        "@openssl//:crypto",
        "@openssl//:ssl",
    ],
    target_compatible_with = select({
        "@platforms//cpu:wasm32": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)
