load("@tx-kit-ext//rules/build:tx_binary.bzl", "tx_binary")

tx_binary(
    name = "try-sdl3pp-1st",
    srcs = glob(["*.cpp"]),
    deps = [
        "@tx-pkg-aux//:pkg-boot",
        "@sdl3pp//:sdl3pp_headers",
        "@sdl3//:sdl3_static",
    ],
    cxxopts = [
        "-Wno-invalid-constexpr",
        "-Wno-mismatched-tags",
        "-Wno-unused-variable",
        "-Wno-missing-braces",
        "-fexceptions",
    ],
    # DISABLED because current SDL3pp version has issues with constexpr, exceptions and another compile errors w/ clang and C++20
    tags = ["disabled"],
)
